manifests/crafty/crafty.yaml
apiVersion: v1
kind: Service
metadata:
  name: crafty-headless
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: crafty
  ports:
    - name: panel
      port: 8443
      targetPort: panel
---
apiVersion: v1
kind: Service
metadata:
  name: crafty-tcp
  annotations:
    io.cilium/lb-ipam-ips: 10.1.2.250
    io.cilium/lb-ipam-sharing-key: dripcraft-shared
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: crafty
  ports:
    - name: panel
      port: 8443
      targetPort: panel
      protocol: TCP
    - name: minecraft
      port: 25565
      targetPort: minecraft
      protocol: TCP
    - name: bluemap
      port: 8100
      targetPort: bluemap
      protocol: TCP
    - name: dynmap
      port: 8123
      targetPort: dynmap
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: crafty-bedrock
  annotations:
    io.cilium/lb-ipam-ips: 10.1.2.250
    io.cilium/lb-ipam-sharing-key: dripcraft-shared
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: crafty
  ports:
    - name: bedrock
      port: 19132
      targetPort: bedrock
      protocol: UDP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: crafty
  labels:
    app.kubernetes.io/name: crafty
spec:
  replicas: 1
  serviceName: crafty-headless
  selector:
    matchLabels:
      app.kubernetes.io/name: crafty
  template:
    metadata:
      labels:
        app.kubernetes.io/name: crafty
    spec:
      securityContext:
        fsGroup: 0
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: crafty
          image: arcadiatechnology/crafty-4:4.10.6
          imagePullPolicy: IfNotPresent
          ports:
            - name: panel
              containerPort: 8443
              protocol: TCP
            - name: minecraft
              containerPort: 25565
              protocol: TCP
            - name: bluemap
              containerPort: 8100
              protocol: TCP
            - name: dynmap
              containerPort: 8123
              protocol: TCP
            - name: bedrock
              containerPort: 19132
              protocol: UDP
          resources:
            requests:
              cpu: "1"
              memory: 4Gi
            limits:
              cpu: "6"
              memory: 8Gi
          volumeMounts:
            - name: crafty-data
              mountPath: /crafty/backups
              subPath: backups
            - name: crafty-data
              mountPath: /crafty/logs
              subPath: logs
            - name: crafty-data
              mountPath: /crafty/servers
              subPath: servers
            - name: crafty-data
              mountPath: /crafty/app/config
              subPath: config
            - name: crafty-data
              mountPath: /crafty/import
              subPath: import
  volumeClaimTemplates:
    - metadata:
        name: crafty-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-path-retain
        resources:
          requests:
            storage: 100Gi
